[gd_scene load_steps=4 format=3 uid="uid://bdq3m84vhc58f"]

[ext_resource type="Script" path="res://UI/battle_ui.gd" id="1_l6wx0"]
[ext_resource type="PackedScene" uid="uid://mabq51fy4cch" path="res://UI/character_portrait.tscn" id="1_qijsq"]
[ext_resource type="Script" path="res://UI/ScrollContainer.gd" id="1_sfkud"]

[node name="BattleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6wx0")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterPortrait" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_qijsq")]
layout_mode = 2

[node name="CharacterPortrait2" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_qijsq")]
layout_mode = 2

[node name="CharacterPortrait3" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("1_qijsq")]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterPortrait" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("1_qijsq")]
layout_mode = 2

[node name="CharacterPortrait2" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("1_qijsq")]
layout_mode = 2

[node name="CharacterPortrait3" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("1_qijsq")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
custom_minimum_size = Vector2(300, 150)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_right = 4.0
offset_bottom = 50.0
grow_horizontal = 2
script = ExtResource("1_sfkud")

[node name="Label" type="Label" parent="ScrollContainer"]
layout_mode = 2
